--- a/stylesheet.css
+++ b/stylesheet.css
@@ -120,7 +120,7 @@ footer{
   height: 50% !important;
   width: 50% !important;
   border: 2px solid white !important;
-  background-color: #171717
+  background-color: #171717;
 }
 
 .rating{
@@ -168,4 +168,25 @@ footer{
 .synopsis h2{
   margin: 0;
   padding-bottom: 15px;
+}
+
+#scrollToTop{
+  width: 50px;
+  height: 50px;
+  line-height: 45px;
+  font-size: 60px;
+  cursor: pointer;
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  display: none;
+  border: 3px solid white;
+  background-color: #C0C0C0;
+  opacity: 0.6;
+  border-radius: 100%;
+  z-index: 1;
+}
+
+#scrollToTop:hover{
+  background-color: #00FF80;
 }
