--- a/stylesheet.css
+++ b/stylesheet.css
@@ -31,12 +31,13 @@ body{
   padding: 20px 0;
   margin: 0;
   font-size: 48px;
+  color: #00FF80;
 }
 #movie-list{
   padding: 0;
 }
 #movie-list li{
-  display: inline-block;
+  display: inline-block !important;
   width: 33%; 
   margin-bottom: 30px;
 }
@@ -74,6 +75,8 @@ body{
 
 .movie-content>img,
 #movie-list li>div>p{
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
 
@@ -108,6 +111,9 @@ footer{
   font: 16px/22px "Roboto", Arial, sans-serif;
   border-radius: 1px;
   border: none;
+  cursor: pointer;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
   transition: all 0.2s ease;
 }
 
@@ -152,9 +158,12 @@ footer{
   font-family: "Roboto", Arial, sans-serif;
   padding: 15px;
   overflow: hidden;
+  text-overflow: ellipsis;
 }
 .synopsis div{
-  height: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  height: 188px;
   margin: 0;
 }
 .synopsis,
@@ -189,4 +198,16 @@ footer{
 
 #scrollToTop:hover{
   background-color: #00FF80;
+}
+
+@media (max-width: 980px){
+  #movie-list li{
+    width: 50%;
+  }
+}
+
+@media (max-width: 768px){
+  #movie-list li{
+    width: 100%;
+  }
 }
