change index view

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,14 +23,27 @@ body{
   margin: 0 auto;
 }
 .header{
+  position: absolute;
   color: white;
-  background-color: #171717;
-  border-bottom: 8px solid black;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%,-30%);
 }
+
+.move-header{
+  position: relative;
+  background-color: #171717;
+  border-bottom: 5px solid black;
+  top: 0;
+  left: 0;
+  width: 100%;
+  transform: translate(0,0);
+}
+
 .header h1{
   padding: 20px 0;
   margin: 0;
-  font-size: 48px;
+  font-size: 52px;
   color: #00FF80;
 }
 #movie-list{
